# authsome

./: .gitignore  Cargo.toml  README.md  chainConfig.json
.fueldb/: 000050.sst  000051.sst  000052.sst  000053.sst  000054.sst  000055.sst  000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000065.sst  000066.sst  000067.sst  000068.sst  000069.sst  000070.sst  000071.sst  000072.sst  000073.sst  000074.sst  000075.sst  000076.sst  000077.sst  000082.sst  000083.sst  000084.sst  000085.sst  000086.sst  000087.sst  000088.sst  000089.sst  000090.sst  000091.sst  000092.sst  IDENTITY  LOG  LOG.old.1667002179133942  LOG.old.1667004036282766  LOG.old.1667016764336160  (+3 more)
client/: package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.tsx  LoginForm.tsx  WalletView.tsx
client/src/contracts/: ContractsAbi.d.ts
client/src/contracts/factories/: ContractsAbi__factory.ts
contracts/: Cargo.toml  Forc.toml
contracts/src/: main.sw
contracts/tests/: harness.rs
node/: README.md  chainConfig.json  package-lock.json  package.json
service/: Cargo.toml  README.md
service/src/: main.rs
