[project]
name = "contracts"
version = "0.1.0"
authors = ["Max","Meir"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { git = "https://github.com/authsome/fuels-rs", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
