[package]
name = "authsome-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = {version="1.3.48", features = ["test"]}
poem-openapi = { version = "2", features = ["swagger-ui"]}
tokio = { version = "1", features = ["full"] }
fuels = { git = "https://github.com/authsome/fuels-rs" }
serde_json = "1.0.87"
serde = "1.0.147"
