[package]
name = "authsome-service"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = {version="1.3.48", features = ["test"]}
poem-openapi = { version = "2", features = ["swagger-ui"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.87"
serde = "1.0.147"
fuels-core = { git = "https://github.com/authsome/fuels-rs" }
fuels-signers = { git = "https://github.com/authsome/fuels-rs" }
fuels-types = { git = "https://github.com/authsome/fuels-rs" }
fuel-gql-client = "0.13.0"
fuel-tx = "0.23.0"
handlebars = "4.3.5"
fuels-contract = "0.27.0"
sha2 = "0.10.6"
lazy_static = "1.4.0"
